basic implementation suitable for our needs to build last characteds in CODE128

--- a/example/index.html
+++ b/example/index.html
@@ -64,5 +64,17 @@
 			repeat5();
 		</script>
 	</div>
+
+	<div>
+		<img id="barcode6"/>
+		<script>JsBarcode("#barcode6", "(253)858800585404742176541", {
+        format: 'CODE128',
+        height: 50,
+        width: 1,
+        fontSize: 14,
+        displayValue: true,
+        boldValueFrom: 11});</script>
+	</div>
+
 </body>
 </html>
